...
      </View>

      {/* 4. AGENDA TAB */}
      
      {isNotExernalUser && 
        <TouchableOpacity
          testID="agenda-tab"
          onPress={() => handleNavigate('agenda')}
          style={styles.tabItem}>
          <Image
            source={require('@/assets/expo.icon/Assets/agenda-pencil-left.svg')}
            style={styles.icon}
            tintColor={activeRouteName === 'agenda' ? colors.main : colors.textSecondary}
...
