appId: com.proyect1.ATIDental
---
- launchApp

- runFlow: common/login-admin.yaml

- tapOn:
    id: "profile-tab"

- extendedWaitUntil:
    visible: "Perfil e Idioma"
    timeout: 10000

# Validar Nombre Vacío
- tapOn:
    id: "input-name"
- eraseText
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "btn-save"
    direction: DOWN
    timeout: 10000
    speed: 40
- tapOn:
    id: "btn-save"
- assertVisible: "El nombre no puede estar vacío"

# Restaurar Nombre
- scrollUntilVisible:
    element:
      id: "input-name"
    direction: UP
    timeout: 10000
    speed: 40
- tapOn:
   id: "input-name"
- inputText: "Valeria"
- hideKeyboard

# Validar Apellido Vacío
- tapOn:
   id: "input-lastname"
- eraseText
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "btn-save"
    direction: DOWN
    timeout: 10000
    speed: 40
- tapOn:
    id: "btn-save"
- assertVisible: "El apellido no puede estar vacío"

# Restaurar Apellido
- scrollUntilVisible:
    element:
      id: "input-lastname"
    direction: UP
    timeout: 10000
    speed: 40
- tapOn:
    id: "input-lastname"
- inputText: "Smith"
- hideKeyboard

# Género
- scrollUntilVisible:
    element:
      id: "select-gender"
    direction: DOWN
    timeout: 10000
    speed: 40
- tapOn:
    id: "select-gender"
- tapOn:
    id: "profile-gender-option-female"

# Validar Correo Vacío
- tapOn:
    id: "input-email"
- eraseText
- tapOn:
    id: "input-email"
- eraseText
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "btn-save"
    direction: DOWN
    timeout: 10000
    speed: 40
- tapOn:
    id: "btn-save"
- assertVisible: "El correo electrónico no puede estar vacío"

# Validar formato de correo invalido
- scrollUntilVisible:
    element:
      id: "input-email"
    direction: UP
    timeout: 10000
    speed: 40
- tapOn:
    id: "input-email"
- inputText: "correo-invalido"
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "btn-save"
    direction: DOWN
    timeout: 10000
    speed: 40
- tapOn:
    id: "btn-save"
- scrollUntilVisible:
    element:
      id: "input-email"
    direction: UP
    timeout: 10000
    speed: 40
- assertVisible: "Formato de correo inválido"

# Correo ya en uso
- scrollUntilVisible:
    element:
      id: "input-email"
    direction: UP
    timeout: 10000
    speed: 40
- tapOn:
    id: "input-email"
- eraseText
- inputText: "usado@atidental.com"
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "btn-save"
    direction: DOWN
    timeout: 10000
    speed: 40
- tapOn:
    id: "btn-save"
- assertVisible: "Este correo ya está registrado en otra cuenta."

# Caida de red
- scrollUntilVisible:
    element:
      id: "input-email"
    direction: UP
    timeout: 10000
    speed: 40
- tapOn:
    id: "input-email"
- eraseText
- tapOn:
    id: "input-email"
- eraseText
- inputText: "sinred@atidental.com"
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "btn-save"
    direction: DOWN
    timeout: 10000
    speed: 40
- tapOn:
    id: "btn-save"
- assertVisible: "Confirmación de Correo"
- tapOn:
    id: "btn-resend-link"
- assertVisible: "Sin conexión a internet. Intenta de nuevo."
- tapOn:
    id: "btn-close-modal"
- assertVisible: "No se realizaron cambios debido a un error previo."
- tapOn: "OK"

# Flujo exitoso
- scrollUntilVisible:
    element:
      id: "input-email"
    direction: UP
    timeout: 10000
    speed: 40
- tapOn:
    id: "input-email"
- eraseText
- tapOn:
    id: "input-email"
- eraseText
- inputText: "dr.nuevo@atidental.com"
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "btn-save"
    direction: DOWN
    timeout: 10000
    speed: 40
- tapOn:
    id: "btn-save"
- assertVisible: "Confirmación de Correo"
- tapOn:
    id: "btn-close-modal"
- assertVisible: "Tu perfil y correo se han verificado y actualizado con éxito."
- tapOn: "OK"

- tapOn:
    id: "menu-btn"

- tapOn:
    id: "nav-item-logout"